k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuistagram
  namespace: nuistagram
  labels:
    app.kubernetes.io/name: nuistagram
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nuistagram
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
